Refactoring Reddit into a module as well

--- a/src/reddit.ipynb
+++ b/src/reddit.ipynb
@@ -3,18 +3,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Find, fetch, and summarize a single article"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -32,10 +27,9 @@
       "### Strengths\n",
       "\n",
       "\n",
-      "- \"It was amazing. ... I would 100% use 98point6 again, especially since my $20 gets me unlimited visits for a year.\" (source: bg7ip2)\n",
-      "- \"She was so kind, and didn't make me feel dumb or worthless for not being able to afford a full price doctor's appointment.\" (source: bg7ip2)\n",
-      "- \"This amazing awesome doctor ... was actively prepared to address the needs of people who have limited funds.\" (source: bg7ip2)\n",
-      "- \"Helped me get paxlovid for covid more quickly than I otherwise would have been able to.\" (source: idl52u3)\n",
+      "- \"It was amazing. ... I would 100% use 98point6 again, especially since my $20 gets me unlimited visits for a year.\" (Comment ID: bg7ip2)\n",
+      "- \"This amazing awesome doctor ... was actively prepared to address the needs of people who have limited funds.\" (Comment ID: bg7ip2)\n",
+      "- \"Helped me get paxlovid for covid more quickly than I otherwise would have been able to.\" (Comment ID: idl52u3)\n",
       "\n",
       "\n",
       "\n",
@@ -43,8 +37,8 @@
       "### Weaknesses\n",
       "\n",
       "\n",
-      "- \"My husband and I have used 98.6 three times. ... We had to wait and get into our family doctor, so we paid 98.6 and our family doctor.\" (source: hrmpl3t)\n",
-      "- \"It's not the right place to go for a broken arm, but for prescription anti-inflammatories or antibiotics for your 3rd UTI of the year or something pretty basic it's a good low cost option.\" (source: bg7ip2)\n",
+      "- \"My husband and I have used 98.6 three times. ... We had to wait and get into our family doctor, so we paid 98.6 and our family doctor.\" (Comment ID: hrmpl3t)\n",
+      "- \"It's not the right place to go for a broken arm, but for prescription anti-inflammatories or antibiotics for your 3rd UTI of the year or something pretty basic it's a good low cost option.\" (Comment ID: bg7ip2)\n",
       "\n",
       "\n",
       "\n",
@@ -70,21 +64,22 @@
     }
    ],
    "source": [
-    "import reddit\n",
-    "from reddit_summarizer import summarize_submission\n",
     "from core import CompanyProduct\n",
+    "import reddit.summarizer\n",
+    "import reddit.search\n",
+    "import reddit.fetch\n",
     "\n",
     "def test_single_summary(target: CompanyProduct):\n",
-    "    reddit_client = reddit.init()\n",
+    "    reddit_client = reddit.fetch.init()\n",
     "\n",
     "    # Search for URLs\n",
-    "    post_url = reddit.find_submission_urls(target, num_results=10)[0]\n",
+    "    post_url = reddit.search.find_submission_urls(target, num_results=10)[0]\n",
     "\n",
     "    # Fetch the Submissions from Reddit\n",
     "    post_submission = reddit_client.submission(url=post_url)\n",
     "\n",
     "    # Summarize each\n",
-    "    return summarize_submission(target, post_submission)\n",
+    "    return reddit.summarizer.summarize_submission(target, post_submission)\n",
     "\n",
     "summary = test_single_summary(CompanyProduct.same(\"98point6\"))\n",
     "\n",
@@ -93,13 +88,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
+      "\n",
       "\n",
       "\n",
       "<html>\n",
@@ -123,13 +120,23 @@
       "\n",
       "    <ul>\n",
       "        \n",
-      "        <li>\"It was amazing. ... I would 100% use 98point6 again, especially since my $20 gets me unlimited visits for a year.\" (source: bg7ip2)</li>\n",
+      "        <li>\"It was amazing. ... I would 100% use 98point6 again, especially since my $20 gets me unlimited visits for a year.\" (source: \n",
+      "\n",
+      "bg7ip2\n",
+      "\n",
+      ")</li>\n",
       "        \n",
-      "        <li>\"She was so kind, and didn't make me feel dumb or worthless for not being able to afford a full price doctor's appointment.\" (source: bg7ip2)</li>\n",
+      "        <li>\"This amazing awesome doctor ... was actively prepared to address the needs of people who have limited funds.\" (source: \n",
+      "\n",
+      "bg7ip2\n",
+      "\n",
+      ")</li>\n",
       "        \n",
-      "        <li>\"This amazing awesome doctor ... was actively prepared to address the needs of people who have limited funds.\" (source: bg7ip2)</li>\n",
-      "        \n",
-      "        <li>\"Helped me get paxlovid for covid more quickly than I otherwise would have been able to.\" (source: idl52u3)</li>\n",
+      "        <li>\"Helped me get paxlovid for covid more quickly than I otherwise would have been able to.\" (source: \n",
+      "\n",
+      "idl52u3\n",
+      "\n",
+      ")</li>\n",
       "        \n",
       "    </ul>\n",
       "    \n",
@@ -140,9 +147,17 @@
       "\n",
       "    <ul>\n",
       "        \n",
-      "        <li>\"My husband and I have used 98.6 three times. ... We had to wait and get into our family doctor, so we paid 98.6 and our family doctor.\" (source: hrmpl3t)</li>\n",
+      "        <li>\"My husband and I have used 98.6 three times. ... We had to wait and get into our family doctor, so we paid 98.6 and our family doctor.\" (source: \n",
+      "\n",
+      "hrmpl3t\n",
+      "\n",
+      ")</li>\n",
       "        \n",
-      "        <li>\"It's not the right place to go for a broken arm, but for prescription anti-inflammatories or antibiotics for your 3rd UTI of the year or something pretty basic it's a good low cost option.\" (source: bg7ip2)</li>\n",
+      "        <li>\"It's not the right place to go for a broken arm, but for prescription anti-inflammatories or antibiotics for your 3rd UTI of the year or something pretty basic it's a good low cost option.\" (source: \n",
+      "\n",
+      "bg7ip2\n",
+      "\n",
+      ")</li>\n",
       "        \n",
       "    </ul>\n",
       "    \n",
@@ -239,15 +254,16 @@
     }
    ],
    "source": [
-    "import reddit\n",
-    "from reddit_summarizer import summarize_submission, summarize_summaries\n",
+    "import src.reddit.fetch as fetch\n",
+    "import src.reddit.search\n",
+    "from src.reddit.summarizer import summarize_submission, summarize_summaries\n",
     "from core import CompanyProduct\n",
     "\n",
     "def short_test(target: CompanyProduct, num_posts: int = 10):\n",
-    "    reddit_client = reddit.init()\n",
+    "    reddit_client = fetch.init()\n",
     "\n",
     "    # Search for URLs\n",
-    "    post_urls = reddit.find_submission_urls(target, num_results=num_posts)[:2]\n",
+    "    post_urls = src.reddit.search.find_submission_urls(target, num_results=num_posts)[:2]\n",
     "\n",
     "    # Fetch the Submissions from Reddit\n",
     "    post_submissions = [reddit_client.submission(url=url) for url in post_urls]\n",
@@ -372,9 +388,10 @@
     "import os\n",
     "import re\n",
     "\n",
-    "import reddit\n",
+    "import src.reddit.fetch as fetch\n",
     "from core import CompanyProduct\n",
-    "from reddit_summarizer import summarize_submission, summarize_summaries\n",
+    "import src.reddit.search\n",
+    "from src.reddit.summarizer import summarize_submission, summarize_summaries\n",
     "\n",
     "from datetime import datetime\n",
     "from collections import ChainMap\n",
@@ -385,10 +402,10 @@
     "    folder_path = f\"evaluation/{folder_name}\"\n",
     "    os.makedirs(folder_path, exist_ok=True)\n",
     "\n",
-    "    reddit_client = reddit.init()\n",
+    "    reddit_client = fetch.init()\n",
     "\n",
     "    # Search for URLs\n",
-    "    post_urls = reddit.find_submission_urls(target, num_results=10)\n",
+    "    post_urls = src.reddit.search.find_submission_urls(target, num_results=10)\n",
     "\n",
     "    # Fetch the Submissions from Reddit\n",
     "    post_submissions = [reddit_client.submission(url=url) for url in post_urls]\n",
@@ -414,7 +431,7 @@
     "        return\n",
     "    \n",
     "    # Index permalinks\n",
-    "    permalinks = ChainMap(*[reddit.index_permalinks(summary.submission) for summary in post_summaries])\n",
+    "    permalinks = ChainMap(*[fetch.index_permalinks(summary.submission) for summary in post_summaries])\n",
     "\n",
     "    # Aggregate the summaries\n",
     "    aggregate_summary = summarize_summaries(target, post_summaries)\n",
@@ -476,16 +493,16 @@
    ],
    "source": [
     "# Test permalinks\n",
-    "import reddit\n",
+    "import src.reddit.fetch as fetch\n",
     "\n",
     "def test_index_permalinks():\n",
     "    \"\"\"Test that we can index permalinks in a Reddit thread\"\"\"\n",
-    "    reddit_client = reddit.init()\n",
+    "    reddit_client = fetch.init()\n",
     "\n",
     "    submission = reddit_client.submission(\n",
     "        url=\"https://www.reddit.com/r/ChatGPT/comments/11twe7z/prompt_to_summarize/\"\n",
     "    )\n",
-    "    return reddit.index_permalinks(submission)\n",
+    "    return fetch.index_permalinks(submission)\n",
     "\n",
     "links = test_index_permalinks()\n",
     "\n",
