More readable HTML output

--- a/src/glassdoor.ipynb
+++ b/src/glassdoor.ipynb
@@ -30,7 +30,7 @@
    "source": [
     "from core import CompanyProduct\n",
     "\n",
-    "target = CompanyProduct(\"Rad AI\", \"Omni\")"
+    "target = CompanyProduct.same(\"98point6\")"
    ]
   },
   {
@@ -42,7 +42,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['https://www.glassdoor.com/Reviews/Rad-AI-Reviews-E3543079.htm', 'https://www.glassdoor.com/Reviews/Rad-AI-team-Reviews-EI_IE3543079.0,6_KH7,11.htm', 'https://www.glassdoor.com/Reviews/Rad-AI-Berkeley-Reviews-EI_IE3543079.0,6_IL.7,15_IC1147330.htm', 'https://www.glassdoor.com/Reviews/Rad-AI-Head-of-Research-Reviews-EI_IE3543079.0,6_KO7,23.htm']\n"
+      "['https://www.glassdoor.com/Reviews/98point6-Reviews-E1181484.htm', 'https://www.glassdoor.com/Reviews/98point6-Seattle-Reviews-EI_IE1181484.0,8_IL.9,16_IM781.htm', 'https://www.glassdoor.com/Reviews/98point6-Reviews-E1181484.htm?filter.jobTitleExact=Software+Engineer(Internship)', 'https://www.glassdoor.com/Reviews/98point6-layoff-Reviews-EI_IE1181484.0,8_KH9,15.htm', 'https://www.glassdoor.com/Reviews/98point6-Physician-Reviews-EI_IE1181484.0,8_KO9,18.htm', 'https://www.glassdoor.com/Reviews/98point6-98point6-Reviews-EI_IE1181484.0,8_KH9,17.htm']\n"
      ]
     }
    ],
@@ -61,9 +61,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2024-07-29 18:01:13.614\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mglassdoor.scraper\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m110\u001b[0m - \u001b[1mscraping reviews from https://www.glassdoor.com/Reviews/Rad-AI-Reviews-E3543079.htm\u001b[0m\n",
-      "\u001b[32m2024-07-29 18:01:13.959\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mglassdoor.scraper\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m118\u001b[0m - \u001b[1mscraped first page of reviews of https://www.glassdoor.com/Reviews/Rad-AI-Reviews-E3543079.htm, scraping remaining 1 pages\u001b[0m\n",
-      "\u001b[32m2024-07-29 18:01:15.469\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mglassdoor.scraper\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m128\u001b[0m - \u001b[1mscraped 13 reviews from https://www.glassdoor.com/Reviews/Rad-AI-Reviews-E3543079.htm in 2 pages\u001b[0m\n"
+      "\u001b[32m2024-07-30 08:42:16.902\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mglassdoor.scraper\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m110\u001b[0m - \u001b[1mscraping reviews from https://www.glassdoor.com/Reviews/98point6-Reviews-E1181484.htm\u001b[0m\n",
+      "\u001b[32m2024-07-30 08:42:18.171\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mglassdoor.scraper\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m118\u001b[0m - \u001b[1mscraped first page of reviews of https://www.glassdoor.com/Reviews/98point6-Reviews-E1181484.htm, scraping remaining 2 pages\u001b[0m\n",
+      "INFO:backoff:Backing off scrape(...) for 0.4s (requests.exceptions.ReadTimeout: HTTPSConnectionPool(host='api.scrapfly.io', port=443): Read timed out. (read timeout=160))\n",
+      "\u001b[32m2024-07-30 08:45:10.531\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mglassdoor.scraper\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m128\u001b[0m - \u001b[1mscraped 30 reviews from https://www.glassdoor.com/Reviews/98point6-Reviews-E1181484.htm in 3 pages\u001b[0m\n"
      ]
     }
    ],
@@ -83,93 +84,55 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The prompt context has 12,927 characters in 13 reviews\n",
-      "# Summary of Glassdoor Reviews for Rad AI\n",
+      "The prompt context has 13,916 characters in 30 reviews\n",
+      "# Summary of 98point6 Glassdoor Reviews\n",
       "\n",
       "## Key Aspects\n",
       "\n",
       "### Leadership\n",
-      "**Pros:**\n",
-      "- Some reviews highlight strong leadership from co-founders, particularly Jeff Chang, who is described as caring and visionary.\n",
-      "- Open and supportive leadership is noted in several positive reviews.\n",
-      "\n",
-      "**Cons:**\n",
-      "- Many reviews criticize the current leadership for being egotistical, inexperienced, and incompetent.\n",
-      "- There are reports of a toxic culture stemming from dysfunctional leadership and a lack of trust in employees.\n",
-      "\n",
-      "**Quotations:**\n",
-      "- \"Egotistical, inexperienced, incompetent leadership\" (Senior Software Engineer on 2021-04-13)\n",
-      "- \"Co-Founders are wonderful... The next level of leadership is where the problem lies.\" (Anonymous on 2023-02-17)\n",
+      "**Pros:** Some reviews highlight strong leadership at the team level, with managers who are responsive and supportive.  \n",
+      "**Cons:** Many reviews criticize upper management for being disconnected, ineffective, and lacking emotional intelligence. There is a noted \"boys' club\" mentality and a failure to listen to employee feedback.  \n",
+      "**Quotations:** \"The management isn’t great- their inexperience in such roles definitely show in really cruddy ways.\" (Licensed Mental Health Professional on 2023-01-31)\n",
       "\n",
       "### Compensation and Benefits\n",
-      "**Pros:**\n",
-      "- Good pay and decent benefits are mentioned positively in several reviews.\n",
-      "- Equity is noted as likely to be valuable.\n",
-      "\n",
-      "**Cons:**\n",
-      "- Some reviews indicate that compensation is not competitive with larger companies.\n",
-      "\n",
-      "**Quotations:**\n",
-      "- \"Great pay. Decent benefits.\" (Senior Software Engineer on 2021-04-13)\n",
-      "- \"The pay is not competitive for the industry.\" (Talent Acquisition on 2024-07-23)\n",
+      "**Pros:** Employees appreciate the generous PTO and flexible work arrangements.  \n",
+      "**Cons:** Compensation is frequently described as low, especially for the workload expected. Many employees have left for better pay elsewhere.  \n",
+      "**Quotations:** \"The biggest two factors are terrible managers and extremely weak pay.\" (Anonymous on 2022-03-13)\n",
       "\n",
       "### Diversity, Equity, and Inclusion\n",
-      "**Pros:**\n",
-      "- Some reviews mention a lack of overt harassment, indicating a positive environment in that regard.\n",
-      "\n",
-      "**Cons:**\n",
-      "- Significant concerns about the lack of women in leadership and microaggressions against female employees are highlighted.\n",
-      "- Reports of sexist comments and a culture that does not support diversity.\n",
-      "\n",
-      "**Quotations:**\n",
-      "- \"I would caution you to provide feedback... a few began sharing their dissatisfaction; it was brought up in team meetings about 'negativity,' and they were let go shortly after.\" (Anonymous on 2023-02-17)\n",
+      "**Pros:** There is a stated desire for diversity within the company.  \n",
+      "**Cons:** Reviews indicate a lack of genuine inclusivity, particularly for women and minorities, with reports of inequitable treatment.  \n",
+      "**Quotations:** \"If you're a female physician or a minority physician, expect to be addressed by your first name.\" (Physician on 2022-04-07)\n",
       "\n",
       "### Work-Life Balance\n",
-      "**Pros:**\n",
-      "- Generally good work-life balance is noted, with remote work options and unlimited PTO.\n",
-      "\n",
-      "**Cons:**\n",
-      "- Some reviews mention that work-life balance can become strained, especially in a startup environment.\n",
-      "\n",
-      "**Quotations:**\n",
-      "- \"Great working environment!\" (Senior Software Engineer on 2021-05-10)\n",
-      "- \"Work-life balance goes haywire sometimes.\" (NLP Data Engineer on 2022-04-05)\n",
+      "**Pros:** Many employees appreciate the flexible work-from-home policies and the overall work-life balance.  \n",
+      "**Cons:** High workloads and expectations can sometimes disrupt this balance.  \n",
+      "**Quotations:** \"Flexible WFH policy, high performing teams.\" (Anonymous on 2024-05-01)\n",
       "\n",
       "### Growth Opportunities\n",
-      "**Pros:**\n",
-      "- Many reviews highlight opportunities for personal and professional growth, with supportive leadership and a mission-driven environment.\n",
-      "\n",
-      "**Cons:**\n",
-      "- The fast-paced nature of a startup can be challenging for some employees.\n",
-      "\n",
-      "**Quotations:**\n",
-      "- \"Lots of room to define your role.\" (Medical Intern on 2021-05-04)\n",
-      "- \"Startup culture is dynamic & not for everyone.\" (Advisor on 2021-05-21)\n",
+      "**Pros:** Some employees feel there are opportunities to grow and develop skills, particularly in the medical field.  \n",
+      "**Cons:** Others note a lack of clear advancement options and a tendency for employees to become pigeonholed in their roles.  \n",
+      "**Quotations:** \"Not many advancement options.\" (Anonymous on 2023-01-20)\n",
       "\n",
       "### Company Culture\n",
-      "**Pros:**\n",
-      "- A strong sense of teamwork and mission-driven culture is praised.\n",
-      "- Many employees feel valued and supported.\n",
-      "\n",
-      "**Cons:**\n",
-      "- Reports of a toxic culture due to poor leadership and internal politics.\n",
-      "\n",
-      "**Quotations:**\n",
-      "- \"Amazing team driven towards making a positive impact.\" (Anonymous on 2022-04-01)\n",
-      "- \"The overall morale is low, and there's a pervasive sense of disillusionment among employees.\" (Talent Acquisition on 2024-07-23)\n",
+      "**Pros:** The company culture is often described as friendly, mission-driven, and supportive at the team level.  \n",
+      "**Cons:** There are concerns about a toxic atmosphere stemming from leadership issues and internal politics.  \n",
+      "**Quotations:** \"Great culture with genuine commitment to Core Values and the company mission.\" (Anonymous on 2023-01-20)\n",
       "\n",
       "## Changes Over Time\n",
-      "The reviews suggest a mixed evolution of the company. While some employees have experienced positive growth and a supportive environment, others have noted a decline in leadership quality and an increase in toxicity. The presence of strong co-founders contrasts with the criticisms of middle management, indicating a potential disconnect as the company has scaled.\n",
+      "The company has experienced significant changes, particularly following the departure of key leadership figures, including the CEO. This has led to a decline in morale, increased layoffs, and a perception that the company is no longer the same as it once was. Many employees express concern over the direction the company is taking and the lack of stability.\n",
       "\n",
-      "## Job Functions and Employee Satisfaction\n",
-      "Employee satisfaction appears to vary significantly by job function. Technical roles, such as software engineering and data science, often report positive experiences, while roles in talent acquisition and operations express dissatisfaction with management and support. This suggests that the alignment of job function with company culture and leadership quality plays a crucial role in overall employee satisfaction.\n",
+      "## Relationship Between Job Functions and Employee Satisfaction\n",
+      "Employee satisfaction appears to vary significantly by job function. While some roles, particularly in clinical and technical areas, report high levels of satisfaction due to the mission and work environment, others express frustration with management and compensation. The disconnect between leadership and employee experience is a recurring theme, suggesting that satisfaction is heavily influenced by direct management and departmental culture.\n",
       "\n",
       "## Questions for Leadership\n",
-      "1. What steps are being taken to address the concerns regarding leadership quality and employee trust?\n",
-      "2. How does the company plan to improve diversity and inclusion, particularly in leadership roles?\n",
-      "3. What measures are in place to ensure competitive compensation and resolve payroll issues promptly?\n",
-      "4. How does the company intend to foster a more positive and collaborative work environment?\n",
-      "5. Can you provide more clarity on the company's long-term vision and how it plans to achieve product-market fit?\n"
+      "1. What specific steps are being taken to improve communication and transparency within the company?\n",
+      "2. How does leadership plan to address the concerns regarding compensation and employee retention?\n",
+      "3. What initiatives are in place to foster a more inclusive and equitable workplace?\n",
+      "4. Can you elaborate on the company's long-term vision and strategy following recent leadership changes?\n",
+      "5. How does the company plan to support employee growth and advancement in the future?\n",
+      "6. What measures are being implemented to ensure that feedback from employees is heard and acted upon?\n",
+      "7. How does the company intend to maintain its mission-driven culture amidst ongoing changes?\n"
      ]
     }
    ],
