--- a/src/reddit.ipynb
+++ b/src/reddit.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,8 @@
       "\n",
       "\n",
       "- \"It was amazing. ... I would 100% use 98point6 again, especially since my $20 gets me unlimited visits for a year.\" (Comment ID: bg7ip2)\n",
-      "- \"This amazing awesome doctor ... was actively prepared to address the needs of people who have limited funds.\" (Comment ID: bg7ip2)\n",
+      "- \"She was so kind, and didn't make me feel dumb or worthless for not being able to afford a full price doctor's appointment.\" (Comment ID: bg7ip2)\n",
+      "- \"This amazing awesome doctor picked up her iPhone and said 'I have an app for a website called GoodRx...'\" (Comment ID: bg7ip2)\n",
       "- \"Helped me get paxlovid for covid more quickly than I otherwise would have been able to.\" (Comment ID: idl52u3)\n",
       "\n",
       "\n",
@@ -37,7 +38,7 @@
       "### Weaknesses\n",
       "\n",
       "\n",
-      "- \"My husband and I have used 98.6 three times. ... We had to wait and get into our family doctor, so we paid 98.6 and our family doctor.\" (Comment ID: hrmpl3t)\n",
+      "- \"My husband and I have used 98.6 three times. All three times they did not prescribe the needed antibiotic to get better.\" (Comment ID: hrmpl3t)\n",
       "- \"It's not the right place to go for a broken arm, but for prescription anti-inflammatories or antibiotics for your 3rd UTI of the year or something pretty basic it's a good low cost option.\" (Comment ID: bg7ip2)\n",
       "\n",
       "\n",
@@ -196,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -207,17 +208,18 @@
       "\n",
       "# 98point6 / 98point6\n",
       "\n",
-      "The Reddit threads discuss user experiences with 98point6, an online medical service that offers affordable consultations and prescriptions. Users generally appreciate the accessibility and cost-effectiveness of the service, although some express concerns about limitations in medication prescriptions and the effectiveness of mental health care. There is no information available regarding employee experiences or investor perspectives.\n",
+      "The Reddit threads discuss user experiences with 98point6, an online medical service that offers affordable consultations and prescriptions. Users highlight the service's accessibility and affordability, but also express concerns about its limitations in prescribing medications and handling more serious medical issues. There is no information available regarding employee experiences or investor perspectives.\n",
       "\n",
       "## User Experience\n",
       "\n",
       "### Strengths\n",
       "\n",
       "\n",
-      "- \"It was amazing. ... I would 100% use 98point6 again, especially since my $20 gets me unlimited visits for a year.\" (source: bg7ip2)\n",
-      "- \"She was so kind, and didn't make me feel dumb or worthless for not being able to afford a full price doctor's appointment.\" (source: bg7ip2)\n",
-      "- \"This amazing awesome doctor ... was actively prepared to address the needs of people who have limited funds.\" (source: bg7ip2)\n",
-      "- \"I really appreciate the accessibility of it.\" (source: gkwtoqb)\n",
+      "- \"It was amazing. ... I would 100% use 98point6 again, especially since my $20 gets me unlimited visits for a year.\" (Comment ID: bg7ip2)\n",
+      "- \"She was so kind, and didn't make me feel dumb or worthless for not being able to afford a full price doctor's appointment.\" (Comment ID: bg7ip2)\n",
+      "- \"This amazing awesome doctor ... was actively prepared to address the needs of people who have limited funds.\" (Comment ID: bg7ip2)\n",
+      "- \"Helped me get paxlovid for covid more quickly than I otherwise would have been able to.\" (Comment ID: idl52u3)\n",
+      "- \"I really appreciate the accessibility of it.\" (Comment ID: gkwtoqb)\n",
       "\n",
       "\n",
       "\n",
@@ -225,10 +227,10 @@
       "### Weaknesses\n",
       "\n",
       "\n",
-      "- \"My husband and I have used 98.6 three times. ... We had to wait and get into our family doctor, so we paid 98.6 and our family doctor.\" (source: hrmpl3t)\n",
-      "- \"It's not a 'this solves all your problems' thing, but it might be a 'this solves some of your problems this week' thing.\" (source: eljexpb)\n",
-      "- \"Total garbage, they rarely prescribe any meds online and tell you to go to a clinic.\" (source: joi8dqm)\n",
-      "- \"I don't know if 98point6 actually can provide mental health care tbh.\" (source: gkwtoqb)\n",
+      "- \"My husband and I have used 98.6 three times. All three times they did not prescribe the needed antibiotic to get better.\" (Comment ID: hrmpl3t)\n",
+      "- \"It's not the right place to go for a broken arm, but for prescription anti-inflammatories or antibiotics for your 3rd UTI of the year or something pretty basic it's a good low cost option.\" (Comment ID: bg7ip2)\n",
+      "- \"Total garbage, they rarely prescribe any meds online and tell you to go to a clinic.\" (Comment ID: joi8dqm)\n",
+      "- \"I don't know if 98point6 actually can provide mental health care tbh.\" (Comment ID: gkwtoqb)\n",
       "\n",
       "\n",
       "\n",
@@ -254,114 +256,32 @@
     }
    ],
    "source": [
-    "import src.reddit.fetch as fetch\n",
-    "import src.reddit.search\n",
-    "from src.reddit.summarizer import summarize_submission, summarize_summaries\n",
+    "import reddit.summarizer\n",
+    "import reddit.search\n",
+    "import reddit.fetch\n",
+    "\n",
     "from core import CompanyProduct\n",
     "\n",
     "def short_test(target: CompanyProduct, num_posts: int = 10):\n",
-    "    reddit_client = fetch.init()\n",
+    "    reddit_client = reddit.fetch.init()\n",
     "\n",
     "    # Search for URLs\n",
-    "    post_urls = src.reddit.search.find_submission_urls(target, num_results=num_posts)[:2]\n",
+    "    post_urls = reddit.search.find_submission_urls(target, num_results=num_posts)[:2]\n",
     "\n",
     "    # Fetch the Submissions from Reddit\n",
     "    post_submissions = [reddit_client.submission(url=url) for url in post_urls]\n",
     "\n",
     "    # Summarize each\n",
-    "    post_summaries = [summarize_submission(target, submission) for submission in post_submissions]\n",
+    "    post_summaries = [reddit.summarizer.summarize_submission(target, submission) for submission in post_submissions]\n",
     "\n",
     "    # Aggregate the summaries\n",
-    "    aggregate_summary = summarize_summaries(target, post_summaries)\n",
+    "    aggregate_summary = reddit.summarizer.summarize_summaries(target, post_summaries)\n",
     "\n",
     "    return aggregate_summary\n",
     "\n",
     "aggregate_summary = short_test(CompanyProduct.same(\"98point6\"))\n",
     "\n",
     "print(aggregate_summary.to_markdown())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "<html>\n",
-      "<head>\n",
-      "    <title></title>\n",
-      "</head>\n",
-      "<body>\n",
-      "\n",
-      "<h1>98point6 / 98point6</h1>\n",
-      "\n",
-      "<p>\n",
-      "The Reddit threads discuss user experiences with 98point6, an online medical service that offers affordable consultations and prescriptions. Users generally appreciate the accessibility and cost-effectiveness of the service, although some express concerns about limitations in medication prescriptions and the effectiveness of mental health care. There is no information available regarding employee experiences or investor perspectives.\n",
-      "</p>\n",
-      "\n",
-      "<h2>User Experience</h2>\n",
-      "\n",
-      "<h3>Strengths</h3>\n",
-      "\n",
-      "\n",
-      "    <ul>\n",
-      "        \n",
-      "        <li>\"It was amazing. ... I would 100% use 98point6 again, especially since my $20 gets me unlimited visits for a year.\" (source: bg7ip2)</li>\n",
-      "        \n",
-      "        <li>\"She was so kind, and didn't make me feel dumb or worthless for not being able to afford a full price doctor's appointment.\" (source: bg7ip2)</li>\n",
-      "        \n",
-      "        <li>\"This amazing awesome doctor ... was actively prepared to address the needs of people who have limited funds.\" (source: bg7ip2)</li>\n",
-      "        \n",
-      "        <li>\"I really appreciate the accessibility of it.\" (source: gkwtoqb)</li>\n",
-      "        \n",
-      "    </ul>\n",
-      "    \n",
-      "\n",
-      "\n",
-      "<h3>Weaknesses</h3>\n",
-      "\n",
-      "\n",
-      "    <ul>\n",
-      "        \n",
-      "        <li>\"My husband and I have used 98.6 three times. ... We had to wait and get into our family doctor, so we paid 98.6 and our family doctor.\" (source: hrmpl3t)</li>\n",
-      "        \n",
-      "        <li>\"It's not a 'this solves all your problems' thing, but it might be a 'this solves some of your problems this week' thing.\" (source: eljexpb)</li>\n",
-      "        \n",
-      "        <li>\"Total garbage, they rarely prescribe any meds online and tell you to go to a clinic.\" (source: joi8dqm)</li>\n",
-      "        \n",
-      "        <li>\"I don't know if 98point6 actually can provide mental health care tbh.\" (source: gkwtoqb)</li>\n",
-      "        \n",
-      "    </ul>\n",
-      "    \n",
-      "\n",
-      "\n",
-      "<h2>Employee Experience</h2>\n",
-      "\n",
-      "<h3>Strengths</h3>\n",
-      "\n",
-      "\n",
-      "\n",
-      "<h3>Weaknesses</h3>\n",
-      "\n",
-      "\n",
-      "\n",
-      "<h2>Investor Perspective</h2>\n",
-      "\n",
-      "\n",
-      "\n",
-      "</body>\n",
-      "</html>\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(aggregate_summary.to_html())"
    ]
   },
   {
@@ -373,14 +293,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Results for CompanyProduct(company='98point6', product='98point6') saved to evaluation/98point6_98point6/20240729_115652.html\n"
+      "Results for CompanyProduct(company='98point6', product='98point6') saved to evaluation/98point6_98point6/20240730_092215.html\n"
      ]
     }
    ],
@@ -388,10 +308,11 @@
     "import os\n",
     "import re\n",
     "\n",
-    "import src.reddit.fetch as fetch\n",
+    "import reddit.summarizer\n",
+    "import reddit.search\n",
+    "import reddit.fetch\n",
+    "\n",
     "from core import CompanyProduct\n",
-    "import src.reddit.search\n",
-    "from src.reddit.summarizer import summarize_submission, summarize_summaries\n",
     "\n",
     "from datetime import datetime\n",
     "from collections import ChainMap\n",
@@ -402,10 +323,10 @@
     "    folder_path = f\"evaluation/{folder_name}\"\n",
     "    os.makedirs(folder_path, exist_ok=True)\n",
     "\n",
-    "    reddit_client = fetch.init()\n",
+    "    reddit_client = reddit.fetch.init()\n",
     "\n",
     "    # Search for URLs\n",
-    "    post_urls = src.reddit.search.find_submission_urls(target, num_results=10)\n",
+    "    post_urls = reddit.search.find_submission_urls(target, num_results=10)\n",
     "\n",
     "    # Fetch the Submissions from Reddit\n",
     "    post_submissions = [reddit_client.submission(url=url) for url in post_urls]\n",
@@ -421,7 +342,7 @@
     "    post_submissions = post_submissions[:num_threads]\n",
     "\n",
     "    # Summarize each\n",
-    "    post_summaries = [summarize_submission(target, submission) for submission in post_submissions]\n",
+    "    post_summaries = [reddit.summarizer.summarize_submission(target, submission) for submission in post_submissions]\n",
     "\n",
     "    # Filter out any with over 1 hallucinated comment id\n",
     "    post_summaries = [summary for summary in post_summaries if summary.is_under_max_hallucinations(1, debug=True)]\n",
@@ -431,10 +352,10 @@
     "        return\n",
     "    \n",
     "    # Index permalinks\n",
-    "    permalinks = ChainMap(*[fetch.index_permalinks(summary.submission) for summary in post_summaries])\n",
+    "    permalinks = ChainMap(*[reddit.fetch.index_permalinks(summary.submission) for summary in post_summaries])\n",
     "\n",
     "    # Aggregate the summaries\n",
-    "    aggregate_summary = summarize_summaries(target, post_summaries)\n",
+    "    aggregate_summary = reddit.summarizer.summarize_summaries(target, post_summaries)\n",
     "\n",
     "    # Create the filename using the current timestamp\n",
     "    timestamp = datetime.now().strftime(\"%Y%m%d_%H%M%S\")\n",
