--- a/src/glassdoor.ipynb
+++ b/src/glassdoor.ipynb
@@ -42,7 +42,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['https://www.glassdoor.com/Reviews/98point6-Reviews-E1181484.htm', 'https://www.glassdoor.com/Reviews/98point6-Seattle-Reviews-EI_IE1181484.0,8_IL.9,16_IM781.htm', 'https://www.glassdoor.com/Reviews/98point6-Reviews-E1181484.htm?filter.jobTitleExact=Software+Engineer(Internship)', 'https://www.glassdoor.com/Reviews/98point6-layoff-Reviews-EI_IE1181484.0,8_KH9,15.htm', 'https://www.glassdoor.com/Reviews/98point6-Physician-Reviews-EI_IE1181484.0,8_KO9,18.htm', 'https://www.glassdoor.com/Reviews/98point6-98point6-Reviews-EI_IE1181484.0,8_KH9,17.htm']\n"
+      "[SearchResult(title='98point6 Reviews: What Is It Like to Work At 98point6? | Glassdoor', link='https://www.glassdoor.com/Reviews/98point6-Reviews-E1181484.htm', snippet='167 98point6 reviews. A free inside look at company reviews and salaries posted anonymously by employees.', formattedUrl='https://www.glassdoor.com/Reviews/98point6-Reviews-E1181484.htm'), SearchResult(title='98point6 Software Engineer(Internship) Reviews | Glassdoor', link='https://www.glassdoor.com/Reviews/98point6-Reviews-E1181484.htm?filter.jobTitleExact=Software+Engineer(Internship)', snippet='3 98point6 reviews. A free inside look at company reviews and salaries posted anonymously by employees.', formattedUrl='https://www.glassdoor.com/Reviews/98point6-Reviews-E1181484.htm?...')]\n"
      ]
     }
    ],
@@ -61,10 +61,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2024-07-30 08:42:16.902\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mglassdoor.scraper\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m110\u001b[0m - \u001b[1mscraping reviews from https://www.glassdoor.com/Reviews/98point6-Reviews-E1181484.htm\u001b[0m\n",
-      "\u001b[32m2024-07-30 08:42:18.171\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mglassdoor.scraper\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m118\u001b[0m - \u001b[1mscraped first page of reviews of https://www.glassdoor.com/Reviews/98point6-Reviews-E1181484.htm, scraping remaining 2 pages\u001b[0m\n",
-      "INFO:backoff:Backing off scrape(...) for 0.4s (requests.exceptions.ReadTimeout: HTTPSConnectionPool(host='api.scrapfly.io', port=443): Read timed out. (read timeout=160))\n",
-      "\u001b[32m2024-07-30 08:45:10.531\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mglassdoor.scraper\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m128\u001b[0m - \u001b[1mscraped 30 reviews from https://www.glassdoor.com/Reviews/98point6-Reviews-E1181484.htm in 3 pages\u001b[0m\n"
+      "\u001b[32m2024-07-31 16:10:51.899\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mglassdoor.scraper\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m110\u001b[0m - \u001b[1mscraping reviews from https://www.glassdoor.com/Reviews/98point6-Reviews-E1181484.htm\u001b[0m\n",
+      "\u001b[32m2024-07-31 16:11:46.975\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mglassdoor.scraper\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m118\u001b[0m - \u001b[1mscraped first page of reviews of https://www.glassdoor.com/Reviews/98point6-Reviews-E1181484.htm, scraping remaining 2 pages\u001b[0m\n",
+      "\u001b[32m2024-07-31 16:12:08.032\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mglassdoor.scraper\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m128\u001b[0m - \u001b[1mscraped 30 reviews from https://www.glassdoor.com/Reviews/98point6-Reviews-E1181484.htm in 3 pages\u001b[0m\n"
      ]
     }
    ],
@@ -90,49 +89,63 @@
       "## Key Aspects\n",
       "\n",
       "### Leadership\n",
-      "**Pros:** Some reviews highlight strong leadership at the team level, with managers who are responsive and supportive.  \n",
-      "**Cons:** Many reviews criticize upper management for being disconnected, ineffective, and lacking emotional intelligence. There is a noted \"boys' club\" mentality and a failure to listen to employee feedback.  \n",
-      "**Quotations:** \"The management isn’t great- their inexperience in such roles definitely show in really cruddy ways.\" (Licensed Mental Health Professional on 2023-01-31)\n",
+      "**Pros:**\n",
+      "- Some reviews highlight strong leadership that cares about employees and takes action on feedback (e.g., \"Strong leadership team that cares about employees\" (Anonymous on 2023-01-20)).\n",
+      "  \n",
+      "**Cons:**\n",
+      "- Many reviews criticize leadership for being tone-deaf, inexperienced, and lacking emotional intelligence. There are mentions of a \"boys' club\" mentality and ineffective management (e.g., \"Ineffective clinical leadership with boys' club attitude\" (Physician on 2022-04-07)).\n",
+      "- Frequent changes in leadership and strategy have led to instability and low morale (e.g., \"Exec team doesn't seem to have long term strategy\" (Software Engineer on 2024-01-17)).\n",
       "\n",
       "### Compensation and Benefits\n",
-      "**Pros:** Employees appreciate the generous PTO and flexible work arrangements.  \n",
-      "**Cons:** Compensation is frequently described as low, especially for the workload expected. Many employees have left for better pay elsewhere.  \n",
-      "**Quotations:** \"The biggest two factors are terrible managers and extremely weak pay.\" (Anonymous on 2022-03-13)\n",
+      "**Pros:**\n",
+      "- Benefits, including PTO, are generally viewed positively (e.g., \"PTO and time-off are better than most companies\" (Anonymous on 2022-03-13)).\n",
+      "  \n",
+      "**Cons:**\n",
+      "- Compensation is frequently described as low, especially for the workload expected (e.g., \"extremely weak pay\" (Anonymous on 2022-03-13)).\n",
       "\n",
       "### Diversity, Equity, and Inclusion\n",
-      "**Pros:** There is a stated desire for diversity within the company.  \n",
-      "**Cons:** Reviews indicate a lack of genuine inclusivity, particularly for women and minorities, with reports of inequitable treatment.  \n",
-      "**Quotations:** \"If you're a female physician or a minority physician, expect to be addressed by your first name.\" (Physician on 2022-04-07)\n",
+      "**Pros:**\n",
+      "- There is a stated desire for diversity within the company (e.g., \"A desire for diversity\" (Anonymous on 2022-01-11)).\n",
+      "  \n",
+      "**Cons:**\n",
+      "- Reports of inequity in treatment based on gender and race, particularly in how titles are used (e.g., \"expect to be addressed by your first name\" (Physician on 2022-04-07)).\n",
       "\n",
       "### Work-Life Balance\n",
-      "**Pros:** Many employees appreciate the flexible work-from-home policies and the overall work-life balance.  \n",
-      "**Cons:** High workloads and expectations can sometimes disrupt this balance.  \n",
-      "**Quotations:** \"Flexible WFH policy, high performing teams.\" (Anonymous on 2024-05-01)\n",
+      "**Pros:**\n",
+      "- Many employees appreciate the flexible work arrangements and remote work options (e.g., \"Flexible work schedule, motivating and impactful work!\" (Director on 2024-01-18)).\n",
+      "  \n",
+      "**Cons:**\n",
+      "- High workloads and expectations can lead to stress, impacting work-life balance (e.g., \"People across all departments leave 98point6 for ridiculous compensation increases\" (Anonymous on 2022-03-13)).\n",
       "\n",
       "### Growth Opportunities\n",
-      "**Pros:** Some employees feel there are opportunities to grow and develop skills, particularly in the medical field.  \n",
-      "**Cons:** Others note a lack of clear advancement options and a tendency for employees to become pigeonholed in their roles.  \n",
-      "**Quotations:** \"Not many advancement options.\" (Anonymous on 2023-01-20)\n",
+      "**Pros:**\n",
+      "- Some employees feel there are opportunities to grow and learn (e.g., \"Great place to work if you want to get deep on a set of problems\" (Anonymous on 2023-01-20)).\n",
+      "  \n",
+      "**Cons:**\n",
+      "- Limited advancement options and a tendency for employees to become pigeonholed in their roles (e.g., \"Not many advancement options\" (Anonymous on 2023-01-20)).\n",
       "\n",
       "### Company Culture\n",
-      "**Pros:** The company culture is often described as friendly, mission-driven, and supportive at the team level.  \n",
-      "**Cons:** There are concerns about a toxic atmosphere stemming from leadership issues and internal politics.  \n",
-      "**Quotations:** \"Great culture with genuine commitment to Core Values and the company mission.\" (Anonymous on 2023-01-20)\n",
+      "**Pros:**\n",
+      "- The company culture is often described as friendly and mission-driven (e.g., \"the people, the mission, so organized and friendly\" (Anonymous on 2022-11-08)).\n",
+      "  \n",
+      "**Cons:**\n",
+      "- Reports of a toxic environment, particularly after leadership changes, have surfaced (e.g., \"morale visibly dipped\" (Senior Security Engineer on 2023-05-10)).\n",
       "\n",
       "## Changes Over Time\n",
-      "The company has experienced significant changes, particularly following the departure of key leadership figures, including the CEO. This has led to a decline in morale, increased layoffs, and a perception that the company is no longer the same as it once was. Many employees express concern over the direction the company is taking and the lack of stability.\n",
+      "The company has experienced significant changes, particularly in leadership and structure. The departure of key executives and subsequent layoffs have led to a decline in morale and employee satisfaction. Many employees feel that the company is no longer the same as it was a year ago, with a shift towards a more toxic environment and a lack of clear direction.\n",
       "\n",
       "## Relationship Between Job Functions and Employee Satisfaction\n",
-      "Employee satisfaction appears to vary significantly by job function. While some roles, particularly in clinical and technical areas, report high levels of satisfaction due to the mission and work environment, others express frustration with management and compensation. The disconnect between leadership and employee experience is a recurring theme, suggesting that satisfaction is heavily influenced by direct management and departmental culture.\n",
+      "Employee satisfaction appears to vary significantly by job function. While some roles, particularly in clinical and technical areas, report high levels of stress and dissatisfaction due to management issues and workload, others, especially in supportive roles, express contentment with their work environment and the mission of the company.\n",
       "\n",
       "## Questions for Leadership\n",
-      "1. What specific steps are being taken to improve communication and transparency within the company?\n",
-      "2. How does leadership plan to address the concerns regarding compensation and employee retention?\n",
-      "3. What initiatives are in place to foster a more inclusive and equitable workplace?\n",
-      "4. Can you elaborate on the company's long-term vision and strategy following recent leadership changes?\n",
-      "5. How does the company plan to support employee growth and advancement in the future?\n",
-      "6. What measures are being implemented to ensure that feedback from employees is heard and acted upon?\n",
-      "7. How does the company intend to maintain its mission-driven culture amidst ongoing changes?\n"
+      "1. What specific steps are being taken to improve leadership effectiveness and emotional intelligence within the management team?\n",
+      "2. How does the company plan to address the compensation concerns raised by employees?\n",
+      "3. What initiatives are in place to ensure diversity, equity, and inclusion are genuinely practiced within the company?\n",
+      "4. Can you provide clarity on the company's long-term strategy and vision following recent leadership changes?\n",
+      "5. How does the company plan to improve communication and transparency with employees?\n",
+      "6. What measures are being implemented to enhance employee morale and reduce turnover?\n",
+      "7. How does the company intend to balance the workload expectations with employee well-being?\n",
+      "8. What opportunities for advancement and professional development are being considered for employees?\n"
      ]
     }
    ],
