Migrate Glassdoor data classes to Pydantic

--- a/src/unified.ipynb
+++ b/src/unified.ipynb
@@ -163,7 +163,7 @@
     "\n",
     "    # job results, not 100% used yet\n",
     "    job_results = await scrape_jobs(Url.jobs(company, company_id), max_pages=max_job_pages)\n",
-    "    jobs = [GlassdoorJob.from_dict(result) for result in job_results]\n",
+    "    jobs = [GlassdoorJob(**result) for result in job_results]\n",
     "    jobs = sorted(jobs, key=lambda job: job.jobTitleText)\n",
     "    \n",
     "    glassdoor_results = await scrape_reviews(review_page.link, max_pages=max_review_pages)\n",
