Finishing the Glassdoor scraping standardization

--- a/src/unified_v2.ipynb
+++ b/src/unified_v2.ipynb
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,12 +104,15 @@
     "from core import CompanyProduct\n",
     "from search import SearchResult\n",
     "\n",
-    "import markdown\n",
-    "import re\n",
     "\n",
     "from glassdoor.search import find_review\n",
-    "from glassdoor.scraper import scrape_reviews, GlassdoorJob, GlassdoorReview, Url\n",
     "from glassdoor.summarizer import summarize\n",
+    "\n",
+    "import scrapfly_scrapers.glassdoor\n",
+    "from scrapfly_scrapers.glassdoor import scrape_reviews, scrape_jobs\n",
+    "from glassdoor.models import UrlBuilder, GlassdoorReview, GlassdoorJob\n",
+    "\n",
+    "scrapfly_scrapers.glassdoor.BASE_CONFIG[\"cache\"] = True\n",
     "\n",
     "@dataclass\n",
     "class GlassdoorResult:\n",
@@ -134,20 +137,22 @@
     "        return self.raw_reviews.get('allReviewsCount', 0)\n",
     "\n",
     "\n",
-    "async def process_glassdoor(target: CompanyProduct, max_review_pages=1, max_job_pages=1, debug=False) -> GlassdoorResult:\n",
+    "async def process_glassdoor(target: CompanyProduct, max_review_pages=1, max_job_pages=0, debug=False) -> GlassdoorResult:\n",
     "    review_page = find_review(target)\n",
-    "    company, company_id = Url.parse_review_url(review_page.link)\n",
+    "    company, company_id = UrlBuilder.parse_review_url(review_page.link)\n",
     "\n",
     "    # job results, not 100% used yet\n",
-    "    # job_results = await scrape_jobs(Url.jobs(company, company_id), max_pages=max_job_pages)\n",
-    "    # jobs = [GlassdoorJob(**result) for result in job_results]\n",
-    "    # jobs = sorted(jobs, key=lambda job: job.jobTitleText)\n",
+    "    jobs = []\n",
+    "    if max_job_pages > 0:\n",
+    "        job_results = await scrape_jobs(UrlBuilder.jobs(company, company_id), max_pages=max_job_pages)\n",
+    "        jobs = [GlassdoorJob(**result) for result in job_results]\n",
+    "        jobs = sorted(jobs, key=lambda job: job.jobTitleText)\n",
     "    \n",
-    "    glassdoor_results = await scrape_reviews(review_page.link, max_pages=max_review_pages)\n",
+    "    response = await scrape_reviews(review_page.link, max_pages=max_review_pages)\n",
     "\n",
     "    if debug:\n",
-    "        pprint(glassdoor_results)\n",
-    "    reviews = GlassdoorReview.parse_reviews(company, glassdoor_results)\n",
+    "        pprint(response)\n",
+    "    reviews = GlassdoorReview.parse_reviews(company, response)\n",
     "    \n",
     "    review_summary = summarize(target, reviews)\n",
     "    \n",
@@ -155,9 +160,9 @@
     "    return GlassdoorResult(\n",
     "        target, \n",
     "        review_page,\n",
-    "        glassdoor_results,\n",
+    "        response,\n",
     "        reviews, \n",
-    "        None, \n",
+    "        jobs,\n",
     "        review_summary.content\n",
     "        )\n"
    ]
@@ -188,10 +193,9 @@
     "    summary_markdown: str\n",
     "\n",
     "\n",
-    "def process_news(target: CompanyProduct) -> NewsSummary:\n",
-    "    search_results = news.search.find_news_articles(target, num_results=30)\n",
+    "def process_news(target: CompanyProduct, max_results=30) -> NewsSummary:\n",
+    "    search_results = news.search.find_news_articles(target, num_results=max_results)\n",
     "\n",
-    "    print(f\"{len(search_results)} URLs found: {search_results}\")\n",
     "    article_markdowns = {result.link: news.scrape.get_article_markdown(result.link) for result in search_results}\n",
     "\n",
     "    article_markdown_list = [article for article in article_markdowns.values() if article]\n",
@@ -308,9 +312,7 @@
     }
    ],
    "source": [
-    "from typing import List\n",
     "from langchain_core.prompts import ChatPromptTemplate\n",
-    "from langchain_core.messages.ai import AIMessage\n",
     "from langchain_openai import ChatOpenAI\n",
     "\n",
     "from core import CompanyProduct\n",
@@ -381,11 +383,11 @@
     "\n",
     "\n",
     "\n",
-    "async def unified_summary(target: CompanyProduct, num_reddit_threads=2, max_glassdoor_review_pages=1, max_glassdoor_job_pages=1):\n",
+    "async def unified_summary(target: CompanyProduct, num_reddit_threads=2, max_glassdoor_review_pages=1, max_glassdoor_job_pages=1, max_news_articles=10):\n",
     "    crunchbase_markdown = await process_crunchbase(target)\n",
     "    reddit_result = process_reddit(target, num_threads=num_reddit_threads)\n",
     "    glassdoor_result = await process_glassdoor(target, max_review_pages=max_glassdoor_review_pages, max_job_pages=max_glassdoor_job_pages)\n",
-    "    news_result = process_news(target)\n",
+    "    news_result = process_news(target, max_results=max_news_articles)\n",
     "\n",
     "\n",
     "    # feed results into LLM for summarization\n",
