--- a/src/test_indeed.ipynb
+++ b/src/test_indeed.ipynb
@@ -52,7 +52,7 @@
    ],
    "source": [
     "from pprint import pprint\n",
-    "import indeed\n",
+    "import src.scrapfly_scrapers.indeed as indeed\n",
     "indeed.BASE_CONFIG[\"cache\"] = True\n",
     "\n",
     "company_result = await indeed.scrape_search(company_search_results.link)\n",
