--- a/src/unified_v2.ipynb
+++ b/src/unified_v2.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,16 +288,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2024-08-12 15:03:14.813\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mglassdoor.scraper\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m127\u001b[0m - \u001b[1mscraping reviews from https://www.glassdoor.com/Reviews/98point6-Reviews-E1181484.htm\u001b[0m\n",
-      "\u001b[32m2024-08-12 15:03:14.832\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mglassdoor.scraper\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m135\u001b[0m - \u001b[1mscraped first page of reviews of https://www.glassdoor.com/Reviews/98point6-Reviews-E1181484.htm, scraping remaining 2 pages\u001b[0m\n",
-      "\u001b[32m2024-08-12 15:03:16.370\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mglassdoor.scraper\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m153\u001b[0m - \u001b[1mscraped 30 reviews from https://www.glassdoor.com/Reviews/98point6-Reviews-E1181484.htm in 3 pages\u001b[0m\n"
+      "\u001b[32m2024-08-12 17:34:58.774\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.crunchbase\u001b[0m:\u001b[36mscrape_company\u001b[0m:\u001b[36m60\u001b[0m - \u001b[1mscraping company: https://www.crunchbase.com/organization/98point6/people\u001b[0m\n",
+      "/home/keith/company-detective/.venv/lib/python3.10/site-packages/langchain_core/_api/deprecation.py:139: LangChainDeprecationWarning: The method `Chain.__call__` was deprecated in langchain 0.1.0 and will be removed in 0.3.0. Use invoke instead.\n",
+      "  warn_deprecated(\n",
+      "\u001b[32m2024-08-12 17:35:10.285\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.glassdoor\u001b[0m:\u001b[36mscrape_jobs\u001b[0m:\u001b[36m77\u001b[0m - \u001b[1mscraping job listings from https://www.glassdoor.com/Jobs/98point6-Jobs-E1181484.htm?\u001b[0m\n",
+      "\u001b[32m2024-08-12 17:35:10.311\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.glassdoor\u001b[0m:\u001b[36mscrape_jobs\u001b[0m:\u001b[36m85\u001b[0m - \u001b[1mscraped first page of jobs of https://www.glassdoor.com/Jobs/98point6-Jobs-E1181484.htm?, scraping remaining 0 pages\u001b[0m\n",
+      "\u001b[32m2024-08-12 17:35:10.312\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.glassdoor\u001b[0m:\u001b[36mscrape_jobs\u001b[0m:\u001b[36m92\u001b[0m - \u001b[1mscraped 0 jobs from https://www.glassdoor.com/Jobs/98point6-Jobs-E1181484.htm? in 1 pages\u001b[0m\n",
+      "\u001b[32m2024-08-12 17:35:10.314\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.glassdoor\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m105\u001b[0m - \u001b[1mscraping reviews from https://www.glassdoor.com/Reviews/98point6-Reviews-E1181484.htm\u001b[0m\n",
+      "\u001b[32m2024-08-12 17:35:10.335\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.glassdoor\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m113\u001b[0m - \u001b[1mscraped first page of reviews of https://www.glassdoor.com/Reviews/98point6-Reviews-E1181484.htm, scraping remaining 2 pages\u001b[0m\n",
+      "\u001b[32m2024-08-12 17:35:11.863\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.glassdoor\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m123\u001b[0m - \u001b[1mscraped 30 reviews from https://www.glassdoor.com/Reviews/98point6-Reviews-E1181484.htm in 3 pages\u001b[0m\n"
      ]
     },
     {
@@ -305,9 +311,10 @@
      "output_type": "stream",
      "text": [
       "The prompt context has 16,256 characters in 30 reviews\n",
-      "30 URLs found: [SearchResult(title='98point6 Technologies Announces the Acquisition of Bright.md to ...', link='https://www.prnewswire.com/news-releases/98point6-technologies-announces-the-acquisition-of-brightmd-to-accelerate-the-launch-of-its-asynchronous-care-module-302034295.html', snippet='Jan 16, 2024 ... SEATTLE, Jan. 16, 2024 /PRNewswire/ -- 98point6 Technologies, a leader in licensed on-demand virtual care software, announced the addition of a new asynchronous\\xa0...', formattedUrl='https://www.prnewswire.com/news.../98point6-technologies-announces-the-...'), SearchResult(title='98point6 hit by new layoffs in latest change at health tech startup ...', link='https://www.geekwire.com/2024/98point6-hit-by-new-layoffs-in-latest-change-at-health-tech-startup/', snippet='Apr 23, 2024 ... In March of last year, 98point6 announced that it was selling its virtual care platform and primary care business to Transcarent for $100 million in cash and\\xa0...', formattedUrl='https://www.geekwire.com/.../98point6-hit-by-new-layoffs-in-latest-change...'), SearchResult(title=\"98point6 buys asynchronous telehealth company Bright.md's ...\", link='https://www.healthcaredive.com/news/98point6-buys-bright-md-assets/704661/', snippet=\"Jan 17, 2024 ... 98point6 Technologies purchased the remainder of asynchronous telehealth provider Bright.md's assets for an undisclosed sum, the virtual care software firm said\\xa0...\", formattedUrl='https://www.healthcaredive.com/news/98point6-buys-bright-md.../704661/'), SearchResult(title='98point6 Technologies Inc. (@98point6Inc) / X', link='https://twitter.com/98point6inc?lang=en', snippet='Oct 9, 2023 ... Activating the digital-first health system. Seattle, WA 98point6.', formattedUrl='https://twitter.com/98point6inc?lang=en'), SearchResult(title=\"Urgent News: Health Tech Layoffs at 98point6 - What's Next?\", link='https://pragmaticdlt.com/news/98point6-undergoes-significant-workforce-reduction-amid-business-model-transformation/', snippet=\"Apr 24, 2024 ... 98point6's strategic layoffs signal a new era. Find out ... Home News 98point6 Undergoes Significant Workforce Reduction Amid Business Model Transformation\\xa0...\", formattedUrl='https://pragmaticdlt.com/news/98point6-undergoes-significant-workforce-r...'), SearchResult(title='98point6 Technologies Collaborates with SteadyMD for Virtual Care ...', link='https://www.steadymd.com/blog/98point6-technologies-collaborates-with-steadymd-to-offer-comprehensive-virtual-care-solution-to-healthcare-organizations/', snippet='Oct 9, 2023 ... SteadyMD News. 98point6 Technologies Collaborates with SteadyMD to Offer Comprehensive Virtual Care Solution to Healthcare Organizations. October 9, 2023 / by\\xa0...', formattedUrl='https://www.steadymd.com/.../98point6-technologies-collaborates-with-stea...'), SearchResult(title='Care enabler 98point6 acquires Bright.md assets', link='https://www.axios.com/pro/health-tech-deals/2024/01/16/98point6-acquires-brightmd-assets-telehealth-care-enablement', snippet='Jan 16, 2024 ... As it embarks on a $32 million-fueled business pivot, care enabler 98point6 bought telehealth company Bright. ... News worthy of your time. Download the\\xa0...', formattedUrl='https://www.axios.com/.../98point6-acquires-brightmd-assets-telehealth-care...'), SearchResult(title='98point6 buys contracts from Bright.md, launches asynchronous ...', link='https://vator.tv/news/2024-01-16-98point6-buys-contracts-from-brightmd-launches-asynchronous-care-module', snippet='Jan 16, 2024 ... 98point6 buys contracts from Bright.md, launches asynchronous care module ... Read more from our \"Trends and news\" series. July 30, 2024. VCs investing in\\xa0...', formattedUrl='https://vator.tv/news/2024-01-16-98point6-buys-contracts-from-brightmd-l...'), SearchResult(title='98point6 Technologies - Products, Competitors, Financials ...', link='https://www.cbinsights.com/company/98point6', snippet='Mar 5, 2024 ... Latest 98point6 Technologies News. Virtual Health Service Market Is Booming ... | Teladoc Health, Amwell, MDLive, 98point6, Babylon Health News Provided\\xa0...', formattedUrl='https://www.cbinsights.com/company/98point6'), SearchResult(title='98point6 Technologies Inc. Company Overview, Contact Details ...', link='https://leadiq.com/c/point-technologies-inc/5a1d98e42300005400877e7d', snippet='Jan 15, 2024 ... Media & News. Media icon. 98point6 Inc. will acquire Bright.md on Oct 1st ... To learn more about 98point6 Technologies, visit www.98point6.com. Sign up\\xa0...', formattedUrl='https://leadiq.com/c/point-technologies-inc/5a1d98e42300005400877e7d'), SearchResult(title='98Point6 Inc files to say raised $29.1 million in equity financing ...', link='https://www.reuters.com/article/brief-98point6-inc-files-to-say-raised-2/brief-98point6-inc-files-to-say-raised-29-1-million-in-equity-financing-idUSFWN1M10QV/', snippet='Aug 2, 2024 ... Reuters Plus · Press Releases · My News · Register · U.S. Markets. 98Point6 Inc files to say raised $29.1 million in equity financing. By Reuters. September 20,\\xa0...', formattedUrl='https://www.reuters.com/...98point6.../brief-98point6-inc-files-to-say-raised...'), SearchResult(title='98point6 lays off employees after shifting focus last year - Puget ...', link='https://www.bizjournals.com/seattle/news/2024/04/24/98point6-layoffs-seattle-telehealth-transcarent.html', snippet=\"Apr 24, 2024 ... Latest News · Lists & Leads · Commercial Real Estate ... 98point6's original business line connected patients to 98point6's own health care professionals.\", formattedUrl='https://www.bizjournals.com/.../news/.../98point6-layoffs-seattle-telehealth-t...'), SearchResult(title='【 2024 】 98point6 Gossips, News and Layoff Discussion Board', link='https://layoffnewz.com/companies/98point6/', snippet='Apr 28, 2024 ... 98point6 Gossips, Layoffs Discussion, News and Rumors. Share, Ask, answer, speculate on layoffs in 98point6 company.', formattedUrl='https://layoffnewz.com/companies/98point6/'), SearchResult(title='Zachary J. Sher | People | Foley & Lardner LLP', link='https://www.foley.com/people/sher-zachary-j/', snippet='Sep 11, 2023 ... Louis , officially combining as a single integrated, academic, patient-centric Missouri-based health system. 01 February 2024 In the News ... 98point6 in a deal\\xa0...', formattedUrl='https://www.foley.com/people/sher-zachary-j/'), SearchResult(title='News 4/26/24 | HIStalk', link='https://histalk2.com/2024/04/25/news-4-26-24/', snippet='Apr 25, 2024 ... News 4/26/24. April 25, 2024. Top News. image. Optum shuts down its virtual ... 98point6, which previously operated as a virtual primary care provider and\\xa0...', formattedUrl='https://histalk2.com/2024/04/25/news-4-26-24/'), SearchResult(title='Joint Notice of The Transcarent Clinic Privacy Practices – Transcarent', link='https://transcarent.com/notice-of-privacy-practices', snippet='Mar 7, 2024 ... This Joint Notice of Privacy Practices (“Notice”) applies to 98point6 Physicians PC, 98point6 ... News · Press · Videos. Get started. Activate Your Account.', formattedUrl='https://transcarent.com/notice-of-privacy-practices'), SearchResult(title='Partner Resources - Partnership to Advance Virtual Care', link='https://partnershiptoadvancevirtualcare.org/partner-resources/', snippet='Feb 2, 2024 ... RESOURCES. All; News; Resources. Telehealth Tuesday. An ... 98point6 Melanie Curtice, Associate General Counsel, 98point6. Read · Listen to\\xa0...', formattedUrl='https://partnershiptoadvancevirtualcare.org/partner-resources/'), SearchResult(title='Changes to wellness resources on campus provide new options ...', link='https://alleghenycampus.com/23109/news/changes-to-wellness-resources-on-campus-provide-new-options/', snippet='Sep 1, 2023 ... The student news site of Allegheny College. The Campus · Facebook · Instagram ... The 98point6 app — introduced last spring as a free online therapy option\\xa0...', formattedUrl='https://alleghenycampus.com/.../news/changes-to-wellness-resources-on-ca...'), SearchResult(title='Celebrating One Year, One Team, One Place – Transcarent', link='https://transcarent.com/blog/celebrating-one-year-one-team-one-place', snippet='Mar 27, 2024 ... 98point6 made it easy to access care 24x7x365 – easier and faster than ever ... News · Press · Videos. Get started. Activate Your Account · Schedule Demo.', formattedUrl='https://transcarent.com/blog/celebrating-one-year-one-team-one-place'), SearchResult(title=\"Banner|Aetna named among Modern Healthcare's 2023 Top ...\", link='https://www.banneraetna.com/en/about-us/news/modern-healthcares-2023-top-innovators.html', snippet='Oct 26, 2023 ... Modern Healthcare is the most trusted business news and information brand in the healthcare industry. ... 98point6® is a registered trademark of 98point6 Inc.', formattedUrl='https://www.banneraetna.com/.../news/modern-healthcares-2023-top-innov...'), SearchResult(title='Susan Kimble - Seattle, Washington, United States | Professional ...', link='https://www.linkedin.com/in/susan-kimble-b0682146', snippet=\"May 31, 2024 ... Location: Seattle · 500+ connections on LinkedIn. View Susan Kimble's profile on LinkedIn, a professional community of 1 billion members.\", formattedUrl='https://www.linkedin.com/in/susan-kimble-b0682146'), SearchResult(title='98point6 Emergicenter, 1540 Lake Lansing Rd, Ste 203, Lansing, MI ...', link='https://www.mapquest.com/us/michigan/98point6-emergicenter-41954594', snippet='Mar 25, 2024 ... Get more information for 98point6 Emergicenter in Lansing, MI. See reviews ... With premium service in the Lansing, MI area, the latest technology, and\\xa0...', formattedUrl='https://www.mapquest.com/us/michigan/98point6-emergicenter-41954594'), SearchResult(title='Enabling Healthy Communities', link='https://www.walgreensbootsalliance.com/sites/www/files/2024-04/ESG%20Report%202023.pdf', snippet='Jan 24, 2024 ... news articles and other communication channels to engage employees about the ... by Transcarent 98point6 and expands access to virtual primary care doctors.', formattedUrl='https://www.walgreensbootsalliance.com/.../ESG%20Report%202023.pdf'), SearchResult(title='Maria Nila Announces Partnership with L Catterton to Accelerate ...', link='https://www.lcatterton.com/Press.html#!/LC-marianila', snippet=\"Sep 7, 2023 ... Share This News. Read all about it! L Catterton's brands are changing our ... Announces Pricing Of Initial Public Offering · 10.15. 98point6 Announces $118\\xa0...\", formattedUrl='https://www.lcatterton.com/Press.html#!/LC-marianila'), SearchResult(title='Envision Radiology Setting a Fast Pace for Interoperability with ...', link='https://www.healthcareittoday.com/2024/02/06/envision-radiology-setting-a-fast-pace-for-interoperability-with-datafirst/', snippet='Feb 6, 2024 ... His Twitter handle is: @Colin_Hung. 98point6 Technologies Announces the ... With over 14,000 articles, Healthcare IT Today is the leading provider of healthcare\\xa0...', formattedUrl='https://www.healthcareittoday.com/.../envision-radiology-setting-a-fast-pace...'), SearchResult(title='MDLIVE - Recent News & Activity', link='https://www.crunchbase.com/organization/mdlive/company_overview/overview_timeline', snippet='Feb 14, 2024 ... ... News• Mar 6, 2024. EIN News — Virtual Health Service Market Is Booming Worldwide 2024-2031 | Teladoc Health, Amwell, MDLive, 98point6,. News• Feb 14, 2024.', formattedUrl='https://www.crunchbase.com/organization/mdlive/.../overview_timeline'), SearchResult(title='Anthem BlueCross EPO - County of Fresno', link='https://www.fresnocountyca.gov/Departments/Human-Resources/Employee-Benefits/Active-Employees-Health-Insurance-Information/Anthem-BlueCross-EPO', snippet=\"Oct 14, 2023 ... News Releases · Community Events · Fresno County Employees' Retirement ... 98point6. (show below). Anthem Blue Cross members have access to 98point6, a\\xa0...\", formattedUrl='https://www.fresnocountyca.gov/.../Human.../Anthem-BlueCross-EPO'), SearchResult(title='Seattle Chicken Chain Mt. Joy Wants to Conquer the World, Then ...', link='https://seattle.eater.com/2023/12/13/23999134/mt-joy-fried-chicken-sandwich-regenerative-farming-seattle-robbie-cape', snippet=\"Dec 13, 2023 ... News. The Fried Chicken Sandwich That Wants to Conquer the World, Then ... 98point6 and serving as its CEO until the board replaced him in 2021. That's\\xa0...\", formattedUrl='https://seattle.eater.com/.../mt-joy-fried-chicken-sandwich-regenerative-far...'), SearchResult(title='Employment Benefits | Catholic Diocese of Pensacola-Tallahassee ...', link='https://ptdiocese.org/benefits', snippet='Feb 16, 2024 ... News & Statements · Pastoral Letter · Homilies ... Instead of paying for an office visit, connect with a board-certified physician using the 98point6 app.', formattedUrl='https://ptdiocese.org/benefits'), SearchResult(title='New Hire Enrollment – Ensign Benefits', link='https://ensignbenefits.com/benefit-basics/new-hire-enrollment', snippet='Dec 2, 2023 ... This website is your go-to resource for Ensign benefits information and news. ... Telemedicine Through 98point6 · Wellvolution · Voluntary Group Accident\\xa0...', formattedUrl='https://ensignbenefits.com/benefit-basics/new-hire-enrollment')]\n",
-      "33,874 characters in unified context\n",
-      "Written to evaluation/98point6_98point6/20240812_150336.md\n"
+      "Failed to get article from https://www.geekwire.com/2024/98point6-hit-by-new-layoffs-in-latest-change-at-health-tech-startup/: 403\n",
+      "Failed to get article from https://www.axios.com/pro/health-tech-deals/2024/01/16/98point6-acquires-brightmd-assets-telehealth-care-enablement: 403\n",
+      "19,686 characters in unified context\n",
+      "Written to evaluation/98point6_98point6/20240812_173554.md\n"
      ]
     }
    ],
