Refactoring to be more comprehensive

--- a/src/unified_v2.ipynb
+++ b/src/unified_v2.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,12 +34,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pprint import pprint\n",
-    "import reddit.summarizer\n",
     "import reddit.map_reduce_summarizer\n",
     "import reddit.search\n",
     "import reddit.fetch\n",
@@ -93,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,33 +287,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2024-08-12 17:34:58.774\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.crunchbase\u001b[0m:\u001b[36mscrape_company\u001b[0m:\u001b[36m60\u001b[0m - \u001b[1mscraping company: https://www.crunchbase.com/organization/98point6/people\u001b[0m\n",
-      "/home/keith/company-detective/.venv/lib/python3.10/site-packages/langchain_core/_api/deprecation.py:139: LangChainDeprecationWarning: The method `Chain.__call__` was deprecated in langchain 0.1.0 and will be removed in 0.3.0. Use invoke instead.\n",
-      "  warn_deprecated(\n",
-      "\u001b[32m2024-08-12 17:35:10.285\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.glassdoor\u001b[0m:\u001b[36mscrape_jobs\u001b[0m:\u001b[36m77\u001b[0m - \u001b[1mscraping job listings from https://www.glassdoor.com/Jobs/98point6-Jobs-E1181484.htm?\u001b[0m\n",
-      "\u001b[32m2024-08-12 17:35:10.311\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.glassdoor\u001b[0m:\u001b[36mscrape_jobs\u001b[0m:\u001b[36m85\u001b[0m - \u001b[1mscraped first page of jobs of https://www.glassdoor.com/Jobs/98point6-Jobs-E1181484.htm?, scraping remaining 0 pages\u001b[0m\n",
-      "\u001b[32m2024-08-12 17:35:10.312\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.glassdoor\u001b[0m:\u001b[36mscrape_jobs\u001b[0m:\u001b[36m92\u001b[0m - \u001b[1mscraped 0 jobs from https://www.glassdoor.com/Jobs/98point6-Jobs-E1181484.htm? in 1 pages\u001b[0m\n",
-      "\u001b[32m2024-08-12 17:35:10.314\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.glassdoor\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m105\u001b[0m - \u001b[1mscraping reviews from https://www.glassdoor.com/Reviews/98point6-Reviews-E1181484.htm\u001b[0m\n",
-      "\u001b[32m2024-08-12 17:35:10.335\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.glassdoor\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m113\u001b[0m - \u001b[1mscraped first page of reviews of https://www.glassdoor.com/Reviews/98point6-Reviews-E1181484.htm, scraping remaining 2 pages\u001b[0m\n",
-      "\u001b[32m2024-08-12 17:35:11.863\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.glassdoor\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m123\u001b[0m - \u001b[1mscraped 30 reviews from https://www.glassdoor.com/Reviews/98point6-Reviews-E1181484.htm in 3 pages\u001b[0m\n"
+      "\u001b[32m2024-08-12 20:06:16.790\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.glassdoor\u001b[0m:\u001b[36mscrape_jobs\u001b[0m:\u001b[36m77\u001b[0m - \u001b[1mscraping job listings from https://www.glassdoor.com/Jobs/98point6-Jobs-E1181484.htm?\u001b[0m\n",
+      "\u001b[32m2024-08-12 20:06:16.800\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.glassdoor\u001b[0m:\u001b[36mscrape_jobs\u001b[0m:\u001b[36m85\u001b[0m - \u001b[1mscraped first page of jobs of https://www.glassdoor.com/Jobs/98point6-Jobs-E1181484.htm?, scraping remaining 0 pages\u001b[0m\n",
+      "\u001b[32m2024-08-12 20:06:16.801\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.glassdoor\u001b[0m:\u001b[36mscrape_jobs\u001b[0m:\u001b[36m92\u001b[0m - \u001b[1mscraped 0 jobs from https://www.glassdoor.com/Jobs/98point6-Jobs-E1181484.htm? in 1 pages\u001b[0m\n",
+      "\u001b[32m2024-08-12 20:06:16.801\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.glassdoor\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m105\u001b[0m - \u001b[1mscraping reviews from https://www.glassdoor.com/Reviews/98point6-Reviews-E1181484.htm\u001b[0m\n",
+      "\u001b[32m2024-08-12 20:06:16.813\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.glassdoor\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m113\u001b[0m - \u001b[1mscraped first page of reviews of https://www.glassdoor.com/Reviews/98point6-Reviews-E1181484.htm, scraping remaining 2 pages\u001b[0m\n",
+      "\u001b[32m2024-08-12 20:06:18.340\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.glassdoor\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m123\u001b[0m - \u001b[1mscraped 30 reviews from https://www.glassdoor.com/Reviews/98point6-Reviews-E1181484.htm in 3 pages\u001b[0m\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The prompt context has 16,256 characters in 30 reviews\n",
-      "Failed to get article from https://www.geekwire.com/2024/98point6-hit-by-new-layoffs-in-latest-change-at-health-tech-startup/: 403\n",
-      "Failed to get article from https://www.axios.com/pro/health-tech-deals/2024/01/16/98point6-acquires-brightmd-assets-telehealth-care-enablement: 403\n",
+      "Glassdoor: The prompt context has 16,256 characters in 30 reviews\n",
       "19,686 characters in unified context\n",
-      "Written to evaluation/98point6_98point6/20240812_173554.md\n"
+      "Written to evaluation/98point6_98point6/20240812_200656.md\n"
      ]
     }
    ],
@@ -333,11 +327,21 @@
     "        (\n",
     "            \"system\",\n",
     "            \"\"\"\n",
-    "You're an expert at summarizing business and product information for prospective employees, and you're able to distill and integrate information from a variety of sources while maintaining links to the original sources for reference.\n",
+    "You're an expert in business and product development.\n",
+    "Carefully review all of the following information about a company and its product.\n",
+    "Write a comprehensive markdown summary of all information with citations to the original sources for reference.\n",
+    "Citations should follow the format [(Author, Source, Date)](url).\n",
     "\n",
-    "Follow this template to summarize the most important information about a company and its product, adding subheadings as needed:\n",
+    "Follow this template to summarize the most important information about a company and its product. Each markdown section has tips on what information is most critical.\n",
     "\n",
     "# About {company_name}\n",
+    "\n",
+    "The About section should provide all the essential information about the company.\n",
+    "An ideal summary should incorporate the answers to the following questions:\n",
+    "- When was the company founded?\n",
+    "- Approximately how many employees work at the company?\n",
+    "- What products does the company produce? What services does the company offer?\n",
+    "- How does the company make money? Who are their customers in general? Is it B2B, B2C? If B2B, include example customers.\n",
     "\n",
     "# Key personnel\n",
     "\n",
@@ -345,11 +349,21 @@
     "\n",
     "# Working at {company_name}\n",
     "\n",
+    "Questions that should be answered by this summary:\n",
+    "- Is the leadership team good?\n",
+    "- What benefits are provided?\n",
+    "- Is the company good at DEI?\n",
+    "- Whats's the work-life balance like and workload?\n",
+    "- How has working at the company changed over time?\n",
+    "- How does employee satisfaction vary by job function?\n",
+    "- Why do people like working here?\n",
+    "- Why do people dislike working here?\n",
+    "\n",
     "## Positive sentiments and experiences\n",
     "\n",
     "## Negative sentiments and experiences\n",
     "\n",
-    "## Verifyable statements\n",
+    "## Verifyable statements about working at {company_name}\n",
     "\n",
     "# User reviews, sentiments, and feedback about {product_name}\n",
     "\n",
@@ -357,10 +371,14 @@
     "\n",
     "## Negative sentiments and experiences\n",
     "\n",
-    "## Verifyable statements\n",
+    "## Verifyable statements about using {product_name}\n",
+    "\n",
+    "# Bibliography\n",
+    "\n",
+    "The Bibliography should include a list of all the sources used to compile the summary.\n",
     "\n",
     "\n",
-    "\n",
+    "Feel free to create subheadings or additional sections as needed to capture the most important information about the company and its product.\n",
     "Format the output as a markdown document, preserving any links in the source.\n",
     "            \"\"\",\n",
     "        ),\n",
